--- a/project-anemone/public/css/style.css
+++ b/project-anemone/public/css/style.css
@@ -1,4 +1,18 @@
+ .imgcontainer {
+            text-align: center;
+            margin: 24px 0 12px 0;
+        }
 
+        img.avatar {
+            width: 45%;
+            border-radius: 30%;
+        }
+.cancelbtn {
+            width: auto;
+            padding: 10px 18px;
+            background-color: #d34036;
+            color:#fff;
+        }
 ul.inline li{
     padding:0;
 }
@@ -202,7 +216,7 @@ h5,
     background-image: url(../images/slider-bg.jpg);
     background-position: center center;
 
-    border-bottom: 4px solid #FFBB00;
+    border-bottom: 4px solid #1900ff;
 }
 .flex-caption {
     color:#70543F;
@@ -231,7 +245,7 @@ h5,
     line-height: 24px;
 }
 .flex-caption .small.yellow{
-    color:#FFBB00;
+    color:#1900ff;
     margin-bottom:35px;
 }
 .flex-caption .cusmo-btn{
@@ -239,7 +253,7 @@ h5,
 }
 .cusmo-btn{
      font-family: "Raleway"!important;
-    background-color: #FFBB00;
+    background-color: #1900ff;
     border-radius: 30px;
     border:none;
     color: #FFFFFF !important;
@@ -296,7 +310,7 @@ h5,
     overflow: hidden;
 }
 .products-holder .product-item:hover{
-    border:4px solid #FFBB00;
+    border:4px solid #1900ff;
     z-index: 1000;
 }
 .products-holder .product-item .tag-line span{
@@ -468,7 +482,7 @@ margin-right: auto!important;
     height: 125px;
 }
 .big-circle{
-    background-color: #FFBB00;
+    background-color: #1900ff;
     border-radius: 200px ;
     box-shadow: 2px 2px 2px #D8D8D8;
     color: #FFFFFF;
@@ -505,7 +519,7 @@ margin-right: auto!important;
 .search-field-holder input:focus{
     box-shadow: none;
     -webkit-box-shadow: none;
-    border: 1px solid #FFBB00;
+    border: 1px solid #1900ff;
 }
 
 .search-field-holder input {
@@ -535,7 +549,7 @@ margin-right: auto!important;
 .email-holder input:focus{
     box-shadow: none;
     -webkit-box-shadow: none;
-    border:2px solid #FFBB00;
+    border:2px solid #1900ff;
 }
 .email-holder input{
     color:#717171;
@@ -723,7 +737,7 @@ margin: 0px 0px 0px -10px;
 }
 .doviz-dropdown .dropdown-menu li a:hover {
     background-image: none;
-    background-color: #FFBB00;
+    background-color: #1900ff;
 }
 .basket .dropdown-menu {
 right: -52px;
@@ -885,7 +899,7 @@ min-width: 70px!important;
 .breadcrumb-holder{
     height: 40px;
     padding-top: 17px;
-    border-bottom: 4px solid #FFBB00;
+    border-bottom: 4px solid #1900ff;
     background-color: #f5f6f1;
 
 }
@@ -908,11 +922,11 @@ min-width: 70px!important;
     margin: 0px 5px;  
 }
 .accordion-widget .accordion-toggle:hover{
-    color:#FFBB00;
+    color:#1900ff;
 }
 
 .accordion-widget .accordion-toggle:after{
-    background-color: #FFBB00;
+    background-color: #1900ff;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     content: "";
@@ -971,7 +985,7 @@ min-width: 70px!important;
     margin-right: 5px;
 }
 .accordion-widget .accordion-inner ul li a:hover{
-    color:#FFBB00;
+    color:#1900ff;
 }
 .accordion-widget .accordion-inner ul li{
     font-size: 13px;
@@ -1018,7 +1032,7 @@ min-width: 70px!important;
 
 }
 .grid-list-buttons li:hover i{
-    color:#FFBB00;
+    color:#1900ff;
 }
 .grid-list-buttons li{
     margin-right: 5px
@@ -1041,7 +1055,7 @@ min-width: 70px!important;
     color:#72533E;
 }
 .grid-list-buttons .active i{
-    color:#FFBB00;
+    color:#1900ff;
 }
 .products-list-head{
     height: 95px;
@@ -1144,7 +1158,7 @@ border-bottom: 0;
 
 .list-item span.old {
     font-size: 14px;
-    color: #FFBB00;
+    color: #1900ff;
     text-decoration: line-through;
     margin-left: 7px;
 }
@@ -1240,7 +1254,7 @@ padding: 4px 18px;
 }
 
 .product-info-box span.old{
-color: #FFBB00;
+color: #1900ff;
 text-decoration: line-through;
 font-size: 14px;
 margin-left: 10px;
@@ -1387,7 +1401,7 @@ margin-bottom: 19px;
 }
 
 #write-review-text:focus {
-border: 1px solid #FFBB00;
+border: 1px solid #1900ff;
 box-shadow: none;
 }
 
@@ -1534,8 +1548,8 @@ text-transform: capitalize;
 }
 .cusmo-input:focus,.cusmo-input:active,.cusmo-input.active{
     border-radius: 30px!important;
-    border: 1px solid #FFBB00 !important;
-box-shadow: 0px 1px #FFBB00!important;
+    border: 1px solid #1900ff !important;
+box-shadow: 0px 1px #1900ff!important;
 outline: none!important;
 }
 .cusmo-input {
@@ -1798,7 +1812,7 @@ padding: 6px 10px!important;
     margin-bottom: 20px;
 }
  .email-link{
-color:#FFBB00;
+color:#1900ff;
 text-decoration: underline;
 }
 .contact-info-boxes {
