New index page updated, visit localhost/index_new.php for reviewing plz.

--- a/project-anemone/public/css/index.css
+++ b/project-anemone/public/css/index.css
@@ -156,7 +156,7 @@
 /* nav-search end */
 
 /* display start */
-#display .note-form{
+/* #display .note-form{
     width: 300px;
     text-align: center;
     box-sizing: border-box;
@@ -208,5 +208,5 @@
     top:20%;
     right: -10%;
     cursor: pointer;
-}
+} */
 /* display end */
